--- a/lab-1/My project.html
+++ b/lab-1/My project.html
@@ -41,7 +41,11 @@
     <p align="centre">
     <img src="3main.jpg" alt="html" width="1300">
     </p>
+    <footer>
+      <p align="center"> &copy; 2025 MY HTML PROJECT|All rights reserved</p>
+    </footer>
 
     
   </body>
 </html>
+
